# sbs-cmpOCR

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
example_data/: HPL0611h.cal  HPL0611i.cal
src/packageimportname/: __main__.py  app.py
src/packageimportname/resources/: datafile.txt
src/sbs-cmpOCR/: __init__.py  app.py  cmpOCR.py  cmpOCRst.py
src/sbs-cmpOCR/resources/: __init__.py  shiny_shinycmpOCR.service
tests/: test_demo.py
tests/testresources/: __init__.py  datafile.txt
