#
# The name set in this file will be the distribution name used with pip
# The name of the directory in src will be the import name
#

[project]
name = "sbs-cmpOCR"
version = "1.0.0-alpha.0"
description = "Compare two (H)OCR files"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}

authors = [
    {name = "Eric Rehm", email = "erehm@seabird.com"},
]

maintainers = [
    {name = "Eric Rehm", email = "erehm@seabird.com"/lc,
]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
]

dependencies = [
    "streamlit",
    "plotly",
    "pandas"
    
]
